1.8.5
- Fix error in afk mode

1.8.4a
- Added option to change player buff and debuff size
- Added option to hide Mana/Energy tickerbar out of combat
- Fix lua error in party frames
- Fix lua error with frFR
- Fix Mana/Energy for energy only classes

1.8.3
- Added option for Mana/Energy Tickerbar (Thanks Skippbo#2190 aka Saar for all the time and Tests)
- Update to 1.13.5
- Added aggroborder to party and raidframes

1.8.2
- Fix some smaller bugs
- Added option for 5SR: Manarege Ticker: Shows a Ticker if you are Manarege

1.8.1
- Added option "Show Player in Groupframes"
- Added 5SR Timer
    - Debuffs and Buffs are now separated and can be moved to different places (Debuffs only grows with Buffs if they are set there default position - To set the de/buffs to there default position, open Move HUD and click on the little button next to there mover frame)
- Fix druidmanabar in shapeshift form

1.8.0
- Added incoming resurrection icon to raid and party
- Remove RealMobHealth support - Blizzard delivery the correct values now in there API
- Added option for range indicator on mainbar
- Added option to show player health as %, value or both
- Dodge bar now works as a secure button and can be bound to a key
- Rebuilt dodge bar for performance and graphical improvement
- Rebuilt health globe for performance and graphical improvement
- Added extra manabar for druids in shapeshift form (testing)
- Add ability to bind Keys by hover
- Added HUD Scale option as a slider
- Advanced Character Stats: - Fixed miss chance calculation
                            - Added Arcane Instability talent for mages to spell crit calculation
                            - Added Holy Power talent for paladins to holy crit calculation
                            - Added MP5-Bonus from T2 set bonuses
                            - Add Priests holy crit talent to calculation
- Added Grid to Move HUD
- Added back Chatbubbles in none protected areas