@@ -182,8 +182,8 @@ local function load5SR()
 
     fsrMana:SetScript("OnEvent", fsr_OnEvent)
     fsrMana:SetScript("OnUpdate", fsr_OnUpdate)
-    fsrMana:RegisterEvent("UNIT_SPELLCAST_SUCCEEDED")
-    fsrMana:RegisterEvent("UNIT_POWER_UPDATE")
+    fsrMana:RegisterUnitEvent("UNIT_SPELLCAST_SUCCEEDED", "player")
+    fsrMana:RegisterUnitEvent("UNIT_POWER_UPDATE", "player")
     if hide_ofc then
         fsrMana:RegisterEvent("PLAYER_REGEN_DISABLED")
         fsrMana:RegisterEvent("PLAYER_REGEN_ENABLED")
@@ -197,7 +197,7 @@ local function load5SR()
         fsrEnergy:RegisterEvent("UPDATE_SHAPESHIFT_FORM")
         fsrEnergy:SetScript("OnEvent", fsr_OnEvent)
         fsrEnergy:SetScript("OnUpdate", fsr_OnUpdate)
-        fsrEnergy:RegisterEvent("UNIT_POWER_UPDATE")
+        fsrEnergy:RegisterUnitEvent("UNIT_POWER_UPDATE", "player")
         if hide_ofc then
             fsrMana:RegisterEvent("PLAYER_REGEN_DISABLED")
             fsrMana:RegisterEvent("PLAYER_REGEN_ENABLED")
